opmaak html klaar

--- a/index.html
+++ b/index.html
@@ -47,7 +47,23 @@
     </div>
     <div class="blokken">
       <h1>Indeling Blokken:</h1>
-      <img src="Opleidingsoverzicht.png" class="opleidingsoverzicht">
+      <img src="img/Opleidingsoverzicht.png" class="opleidingsoverzicht">
+    </div>
+    <div class="rooster">
+      <h1>Rooster</h1>
+      <img src="img/Rooster.png" alt="Rooster" class="rooster">
+    </div>
+    <div class="vakanties">
+      <h1>Vakanties</h1>
+      <img src="img/vakanties.png" alt="" class="vakanties">
+    </div>
+    <div class="leraren">
+      <h1>Leraren</h1>
+      <img src="img/Leraren.png" alt="" class="leraren">
+    </div>
+    <div class="vakken">
+      <h1>Vakken</h1>
+      <img src="img/Vakken.png" alt="" class="vakken">
     </div>
   </body>
 
