--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <div class="leraren">
       <h1>Leraren</h1>
       <img src="img/Leraren.png" alt="" class="leraren">
+      <p>Docenten Jan, Kees en Katja</p>
     </div>
     <div class="vakken">
       <h1>Vakken</h1>
