--- a/index.html
+++ b/index.html
@@ -33,38 +33,36 @@
     <img src="img/logo.png" class="logo">
   </header>
   <body>
-    <div class="leerling">
-      <img src="img/loui.jpeg" class="loui">
-      <h1>Louinardo Holzken</h1>
-    </div>
-    <div class="mening">
-      <h2>Mening:</h2>
-      <p>Ik vind de opleiding geweldig en heb het hier super naar mijn zin! Vooral het vak Web-Development is mijn lievlingsvak en een echte aanrader!</p>
-    </div>
-    <div class="huiswerk">
-      <h2>Huiswerk:</h2>
-      <p>Huiswerk maak je altijd af! Eens per week krijg je een opdracht van een vak een zogenaamde weekcheck. Waar je dus een applicatie moet maken als oefening!</p>
-    </div>
-    <div class="blokken">
-      <h1>Indeling Blokken:</h1>
-      <img src="img/Opleidingsoverzicht.png" class="opleidingsoverzicht">
-    </div>
-    <div class="rooster">
-      <h1>Rooster</h1>
-      <img src="img/Rooster.png" alt="Rooster" class="rooster">
-    </div>
-    <div class="vakanties">
-      <h1>Vakanties</h1>
-      <img src="img/vakanties.png" alt="" class="vakanties">
-    </div>
-    <div class="leraren">
-      <h1>Leraren</h1>
-      <img src="img/Leraren.png" alt="" class="leraren">
-      <p>Docenten Jan, Kees en Katja</p>
-    </div>
-    <div class="vakken">
-      <h1>Vakken</h1>
-      <img src="img/Vakken.png" alt="" class="vakken">
+    <div class="container">
+      <div class="leerling">
+        <img src="img/loui.jpeg" class="loui">
+        <h1>Louinardo Holzken</h1>
+      </div>
+      <div class="mening">
+        <h2>Mening:</h2>
+        <p>Ik vind de opleiding geweldig en heb het hier super naar mijn zin! Vooral het vak Web-Development is mijn lievlingsvak en een echte aanrader!</p>
+        <h2>Huiswerk:</h2>
+        <p>Huiswerk maak je altijd af! Eens per week krijg je een opdracht van een vak een zogenaamde weekcheck. Waar je dus een applicatie moet maken als oefening!</p>
+      </div>
+      <div class="blokken">
+        <h1>Indeling Blokken:</h1>
+        <img src="img/Opleidingsoverzicht.png" class="opleidingsoverzicht">
+      </div>
+      <div class="rooster">
+        <h1>Rooster</h1>
+        <img src="img/Rooster.png" alt="Rooster" class="rooster">
+        <h1>Vakanties</h1>
+        <img src="img/vakanties.png" alt="" class="vakanties">
+      </div>
+      <div class="leraren">
+        <h1>Leraren</h1>
+        <img src="img/Leraren.png" alt="" class="leraren">
+        <p>Docenten Jan, Kees en Katja</p>
+      </div>
+      <div class="vakken">
+        <h1>Vakken</h1>
+        <img src="img/Vakken.png" alt="" class="vakken">
+      </div>
     </div>
   </body>
 
