changed the css and made a gridbox

--- a/index.html
+++ b/index.html
@@ -35,17 +35,12 @@
   <body>
     <div class="container">
       <div class="leerling">
+        <h1>Leerling</h1>
         <img src="img/loui.jpeg" class="loui">
-        <h1>Louinardo Holzken</h1>
-      </div>
-      <div class="mening">
-        <h2>Mening:</h2>
-        <p>Ik vind de opleiding geweldig en heb het hier super naar mijn zin! Vooral het vak Web-Development is mijn lievlingsvak en een echte aanrader!</p>
-        <h2>Huiswerk:</h2>
-        <p>Huiswerk maak je altijd af! Eens per week krijg je een opdracht van een vak een zogenaamde weekcheck. Waar je dus een applicatie moet maken als oefening!</p>
+        <h2>Louinardo Holzken</h2>
       </div>
       <div class="blokken">
-        <h1>Indeling Blokken:</h1>
+        <h1>Indeling Blokken</h1>
         <img src="img/Opleidingsoverzicht.png" class="opleidingsoverzicht">
       </div>
       <div class="rooster">
@@ -53,6 +48,12 @@
         <img src="img/Rooster.png" alt="Rooster" class="rooster">
         <h1>Vakanties</h1>
         <img src="img/vakanties.png" alt="" class="vakanties">
+      </div>
+      <div class="mening">
+        <h2>Mening</h2>
+        <p>Ik vind de opleiding geweldig en heb het hier super naar mijn zin! Vooral het vak Web-Development is mijn lievlingsvak en een echte aanrader! Je leert er van alles over het maken van een webapplicatie. Ook zijn de andere vakken heel erg leuk om te doen zoals, NATIVE. Bij NATIVE maken we heel erg veel Windows-applicaties. Ik vind alleen de generieken vakken zoals, Engels en Nederlands minder interessant en leuk en zijn niet de leukste dingen op de opleiding. De sfeer op de opleiding is heel erg fijn en ook zijn de docenten top!</p>
+        <h2>Huiswerk</h2>
+        <p>Huiswerk maak je altijd af! Eens per week krijg je een opdracht van een vak een zogenaamde weekcheck. Waar je dus een applicatie moet maken als oefening! Het huiswerk verschilt per hoeveelheid per vak.</p>
       </div>
       <div class="leraren">
         <h1>Leraren</h1>
@@ -65,7 +66,9 @@
       </div>
     </div>
   </body>
-
+  <footer>
+    
+  </footer>
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
