media query's done

--- a/index.html
+++ b/index.html
@@ -55,20 +55,18 @@
         <h2>Huiswerk</h2>
         <p>Huiswerk maak je altijd af! Eens per week krijg je een opdracht van een vak een zogenaamde weekcheck. Waar je dus een applicatie moet maken als oefening! Het huiswerk verschilt per hoeveelheid per vak.</p>
       </div>
-      <div class="leraren">
+      <div class="Leraren">
         <h1>Leraren</h1>
-        <img src="img/Leraren.png" alt="" class="leraren">
+        <img src="img/leraren.png" alt="" class="leraren">
         <p>Docenten Jan, Kees en Katja</p>
       </div>
       <div class="vakken">
         <h1>Vakken</h1>
-        <img src="img/Vakken.png" alt="" class="vakken">
+        <img src="img/vakken.png" alt="" class="vakken">
       </div>
     </div>
   </body>
-  <footer>
-    
-  </footer>
+
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
